<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#060B30"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <SearchView
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:background="#5050B2"
            android:layout_marginTop="50dp"
            android:clickable="true"/>

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:background="#45497E"
            android:layout_marginTop="25dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/c_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/c_country"
                android:textColor="#F8F8F9"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/c_cases"
                        android:textColor="#FB4C57"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="222,111,000"
                        android:textColor="#D9ECF6"
                        android:textSize="20sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/c_active"
                        android:textColor="#4058F5"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="222,111,000"
                        android:textColor="#D9ECF6"
                        android:textSize="20sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/c_death"
                        android:textColor="#9AABB5"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1,200,300"
                        android:textColor="#D9ECF6"
                        android:textSize="20sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/c_recovered"
                        android:textColor="#19DF68"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="35,111,000"
                        android:textColor="#D9ECF6"
                        android:textSize="20sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/c_certival"
                        android:textColor="#FB4C57"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="211,000"
                        android:textColor="#D9ECF6"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
