<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paaa1"
    tools:context=".MainActivity"
    android:id="@+id/countries_page">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="240dp">

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingHorizontal="10dp"
            android:text="@string/Overview_cases"
            android:textColor="#B1DFF9"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="130dp"
                android:background="@drawable/imgcases"
                android:layout_margin="5dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/circlevert" />

                    <TextView
                        android:id="@+id/casedeathNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="51,360,778"
                        android:textColor="#F44336"
                        android:textSize="21sp"
                        android:gravity="center"
                        android:layout_marginTop="20dp"/>

                    <TextView
                        android:id="@+id/caserecovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Cases"
                        android:textColor="#000000"
                        android:textSize="23sp"
                        android:gravity="center"
                        android:layout_marginTop="18dp"
                        android:textStyle="bold"/>

                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="130dp"
                android:background="@drawable/imgcases"
                android:layout_margin="5dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/circlerouge" />

                    <TextView
                        android:id="@+id/recoveredNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="23,360,778"
                        android:textColor="#29AF15"
                        android:textSize="21sp" />

                    <TextView
                        android:id="@+id/textrecovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:gravity="center"
                        android:text="@string/recovered"
                        android:textColor="#000000"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="130dp"
                android:background="@drawable/imgcases"
                android:layout_margin="5dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/circlenoir" />

                    <TextView
                        android:id="@+id/deathNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="1,360,778"
                        android:textColor="#383333"
                        android:textSize="21sp" />

                    <TextView
                        android:id="@+id/textdeath"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Deaths"
                        android:textColor="#000000"
                        android:textSize="23sp"
                        android:gravity="center"
                        android:layout_marginTop="18dp"
                        android:textStyle="bold"/>

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/population_with"
            android:textColor="#B1DFF9"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="5dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <org.eazegraph.lib.charts.PieChart
                android:id="@+id/piechart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="6dp"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="center_vertical">
                    <View
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:background="@color/cases"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/graphconfirmed"
                        android:paddingLeft="10dp"
                        android:textColor="#B1DFF9"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp">
                    <View
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:background="@color/recovered"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/graphrecovered"
                        android:paddingLeft="10dp"
                        android:textColor="#B1DFF9"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp">
                    <View
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:background="@color/deaths"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/graphdeaths"
                        android:paddingLeft="10dp"
                        android:textColor="#B1DFF9"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
